--- a/frontend/src/styles/Contact.css
+++ b/frontend/src/styles/Contact.css
@@ -18,11 +18,3 @@
     outline: none;
     border: 2px solid var(--purple);
 }
-
-@media only screen and (max-width: 768px)  {
-    .skills { height: 50vh; }
-}
-  
-@media only screen and (min-width: 769px) and (max-width: 1800px)  {
-    .skills { height: 25vh; }
-}
